--- a/gram/templates/registration/login.html
+++ b/gram/templates/registration/login.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div class="container mt-4">
+<div class="container mt-4" style="height:80vh;margin-top:7%;">
     <div class="row">
 
         <!--spacer-->
@@ -21,7 +21,7 @@
         <!--Login form-->
         <div class="col-xs-4 col-sm-4 col-md-4 mt-4">
             <div class="card ">
-                <div class="card-title mt-4">
+                <div class="card-title mt-4 ml-5">
                     <img src="{% static 'images/in_web_logo.png' %}" alt="" width="40%" class="D-block mx-auto">
                 </div>
                 <div class="card-body mb-3 mr-3 ml-3">
