--- a/gram/templates/registration/signup.html
+++ b/gram/templates/registration/signup.html
@@ -12,14 +12,9 @@
         <div class="col-xs-3 col-sm-3 col-md-3"></div>
 
         <!--Signing up form-->
-        <div class="col-xs-6 col-sm-6 col-md-6">
-        
-            <!--Mobile app template-->
+        <div class="col-xs-6 col-sm-6 col-md-6">        
             <div class="card">
-                <div class="card-title mt-4">
-                    <img src="{% static 'images/phone.png' %}" alt="" width="40%" class="D-block mx-auto">
-                </div>
-
+                
                 <!--Form-->
                 <div class="card-body mb-3 mr-3 ml-3">
                     <p class="text-center">Sign up to see photos and videos from friends.</p>
@@ -41,10 +36,10 @@
                 <div class="row">
                     <div class="col-xs-1 col-sm-1 col-md-1"></div>
                     <div class="col-xs-5 col-sm-5 col-md-5 mb-2">
-                        <a href="https://apps.apple.com/us/app/instagram/id389801252"><img src="{% static 'images/istore.png' %}" alt="" width="100%" class="download"></a>
+                        <a href="https://apps.apple.com/us/app/instagram/id389801252" target="_blank"><img src="{% static 'images/istore.png' %}" alt="" width="100%" class="download"></a>
                     </div>
                     <div class="col-xs-5 col-sm-5 col-md-5 mb-2">
-                        <a href="https://play.google.com/store/apps/details?id=com.instagram.android"><img src="{% static 'images/gplay.png' %}" alt="" width="100%" class="download"></a>
+                        <a href="https://play.google.com/store/apps/details?id=com.instagram.android" target="_blank"><img src="{% static 'images/gplay.png' %}" alt="" width="100%" class="download"></a>
                     </div>
                     <div class="col-xs-1 col-sm-1 col-md-1"></div>
                 </div>
