--- a/gram/templates/base.html
+++ b/gram/templates/base.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     {% endblock %}
 </head>
-<body>
+<body style="background-image: url('../../static/images/mobile-background.jpg');background-repeat:no-repeat;background-size:cover;" class="body" >
 <div class="overlay">
 
         {% block navbar %}
@@ -40,11 +40,7 @@
 
         {% block content %}
         {% endblock %}
-        {% block footer %}
-
-        {% include "footer.html" %}
-        {% endblock %}
-
+        
 
 {% block scripts %}
 
