--- a/gram/templates/gram_temp/index.html
+++ b/gram/templates/gram_temp/index.html
@@ -6,10 +6,10 @@
 <div class="container" style="margin-top:7%;">
     <div class="row">
         <div class="col-xs-1 col-sm-1 col-md-1"></div>
-        <div class="col-xs-7 col-sm-7col-md-7">
+        <div class="col-xs-7 col-sm-7 col-md-7">
             <div class="row">
 
-                <button class="btn btn-sm btn-outline-primary ml-4 mb-3" data-toggle="modal" data-target="#imageUpload">Add Image</button>
+                <button class="btn btn-sm btn-primary ml-4 mb-3" data-toggle="modal" data-target="#imageUpload">Add Image</button>
                 <div class="modal fade" id="imageUpload" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
